k8s/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: uptoyoushop
  tier: frontend
  # namespace: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptoyoushop
  template:
    metadata:
      labels:
        app: uptoyoushop
    spec:
      containers:
        - name: frontend-app
          image: maxdev888/uptoyoushop:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
