k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: uptoyoushop
spec:
  selector:
    app: uptoyoushop
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
