k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptoyoushop-ingress
  labels:
    app: uptoyoushop
  namespace: uptoyoushop
  annotations: # kubernetes.io/ingress.class: alb # AWS ALB Ingress Controller
spec:
  rules:
    # - host: frontend.uptoyou.shop
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-app
              port:
                number: 80
  ingressClassName: alb
